--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-hook-form": "^7.31.3",
     "react-native": "0.68.2",
+    "react-native-element-dropdown": "^2.0.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.8.0",
