--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.68.2",
     "react-native-element-dropdown": "^2.0.0",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.3.1",
@@ -28,7 +29,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "7.18.2",
