video player section in demo video

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -261,12 +261,17 @@ android {
 }
 
 dependencies {
+ 
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    // compile project(':react-native-video');  
+    // implementation "androidx.appcompat:appcompat:1.0.0"; 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
+   
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
@@ -288,6 +293,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+       
+   
 }
 
 if (isNewArchitectureEnabled()) {
