--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,5 +52,11 @@ allprojects {
 
          // ADD THIS
         maven { url 'https://maven.google.com' }
+
+        jcenter() {
+            content {
+                includeModule("com.yqritc", "android-scalablevideoview")
+            }
+        }
     }
 }
