--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-media-controls": "^2.3.0",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
-    "react-native-video-controls": "^2.8.1",
+    "react-native-webview": "^11.22.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
